[package]
name = "dhdl-parser"
version = "0.1.0"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
description = "parser library for DHDL"
license = "GPL-3.0"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.18", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18"
regex = "1"
